@@ -40,22 +40,28 @@ register struct ch_queue * q;
 #endif
 
 /* Adds character c, waiting if wait=1 (or otherwise throws out new char) */
-int chq_addch(q, c, wait)
+int chq_addch(q, c /*, wait */)
 register struct ch_queue * q;
 unsigned char c;
-int wait;
+/* int wait; */
 {
 	unsigned int nhead; 
 
-	printd_chq5("CHQ: chq_addch(%d, %c, %d) q->len=%d q->tail=%d\n", q, c, wait, q->len, q->tail);
+	printd_chq5("CHQ: chq_addch(%d, %c, %d) q->len=%d q->tail=%d\n", q, c, 0, q->len, q->tail);
 
-	while (q->len == q->size) {
-		if (!wait) {
-			return -1;
+/* If waiting is required then the code below must be put back in */
+/* And the wait argument put back */
+#if 0
+	if (q->len == q->size) {
+		if (wait) {
+			printd_chq("CHQ: addch sleeping\n");
+			interruptible_sleep_on(&q->wq);
+			printd_chq("CHQ: addch waken up\n");
 		}
-		printd_chq("CHQ: addch sleeping\n");
-		sleep_on(&q->wq);
-		printd_chq("CHQ: addch waken up\n");
+	}
+#endif
+	if (q->len == q->size) {
+		return -1;
 	}
 
 	nhead = (q->tail + q->len) % q->size;	
