@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Sun Oct 11 13:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Corrected some signal behavoir, fixed return status behavoir.
+
 Sat Oct 10 11:59 CET 1998   Simon Weijgers  <simon@mbit.doa.org>
 
 	* After detection of executable format jump to
